fixed overflow issue on my profile page

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -90,3 +90,8 @@ blockquote p {
 .profile-img {
   max-width: 165px;
 }
+@media only screen and (max-width: 780px) {
+  .user-info > * {
+    font-size: 5;
+  }
+}
